--- a/entry.html
+++ b/entry.html
@@ -35,7 +35,7 @@
 			<div style="max-width: 500px">
 					<div class="w3-padding" style="max-width: 500px">
 						<form class="w3-margin" id="signup" style="text-align:left;height: 90vh;display: block;">
-							<span class="w3-large"><b>Create an Account to to get complete access.</b></span>
+							<span class="w3-large"><b>Create an Account to get complete access.</b></span>
 							<br><br><br>
 							<span class="w3-xxlarge"><b>Sign Up</b></span><br><br>
 							
