--- a/entry.html
+++ b/entry.html
@@ -34,7 +34,7 @@
 		<center class="back" style="width: 100%;height: 100%;">
 			<div style="max-width: 500px">
 					<div class="w3-padding" style="max-width: 500px">
-						<form class="w3-margin" id="signup" style="text-align:left;height: 90vh;display: block;">
+						<form class="w3-margin" id="signup" style="text-align:left;height: 90vh;display: none;">
 							<span class="w3-large"><b>Create an Account to get complete access.</b></span>
 							<br><br><br>
 							<span class="w3-xxlarge"><b>Sign Up</b></span><br><br>
@@ -57,7 +57,7 @@
 						</form>
 					</div>
 
-					<div  id="login" class="w3-padding back" style="max-width: 500px;display: none;">
+					<div  id="login" class="w3-padding back" style="max-width: 500px;display:block;">
 						<div style="height:10vh;text-align: center;"></div>
 						<div class="w3-margin"  style="text-align:left;height: 80vh;">
 							<span class="w3-xxlarge"><b>Log In</b></span><br><br>
