--- a/entry.html
+++ b/entry.html
@@ -7,7 +7,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="icon" type="image/png" href="favicon.png"/>
+		<!--<link rel="icon" type="image/png" href="favicon.png"/>-->
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
@@ -27,7 +27,7 @@
 				color: #2196F3;
 			}
 		</style>
-		<link rel="manifest" href="manifest.webmanifest">
+		<!--<link rel="manifest" href="manifest.webmanifest">-->
 	</head>
 	<body id="body">
 		<div id="error" style="display: none;position: fixed;top:0px;width: 100%;height: 100%;" class="w3-black w3-center w3-padding"></div>
@@ -44,7 +44,7 @@
 							<div class="w3-text-red w3-center w3-medium" id="acc_e"></div>
 							
 							<label><b>New Username</b></label><br>
-							<input class="text-ip" type="text" placeholder="eg. jane_27" onchange="CheckUname(this)">
+							<input class="text-ip" type="text" placeholder="eg. jane_27">
 							<div class="w3-text-red w3-center w3-medium" maxlength="15" id="name_e"></div>
 							
 							<label><b>New Password</b></label><br>
@@ -88,8 +88,8 @@
 					</div>
 			</div>
 		</center>
-		<button class="add-button w3-xlarge w3-bottom w3-bar w3-padding"><b>Add Fito to home screen</b></button>
+		<!--<button class="add-button w3-xlarge w3-bottom w3-bar w3-padding"><b>Add CampusMap to home screen</b></button>-->
 	</body>
-	<script type="text/javascript" src="hs.js"></script>
+	<!--<script type="text/javascript" src="hs.js"></script>-->
 	<script type="text/javascript" src="entry_script.js"></script>
 </html>
