made many changes

--- a/entry.html
+++ b/entry.html
@@ -91,5 +91,5 @@
 		<!--<button class="add-button w3-xlarge w3-bottom w3-bar w3-padding"><b>Add CampusMap to home screen</b></button>-->
 	</body>
 	<!--<script type="text/javascript" src="hs.js"></script>-->
-	<script type="text/javascript" src="entry_script.js"></script>
+	<script type="text/javascript" src="scripts/entry_script.js"></script>
 </html>
