--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Map</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<!--<link rel="icon" type="image/png" href="favicon.png"/>-->
+		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+		<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="">
-		<style type="text/css">
-			.room {
-				border: 1vh solid gray;
-				position: absolute;
-				padding: 5vh;
-				font-size: 4vh;
-				overflow: hidden;
-				margin: inherit;
-			}
-			.blank {
-				border: 1vh solid white;
-				position: absolute;
-				padding: 5vh;
-				margin: inherit;
-			}
-			#map {
-				margin: 10vh;
-			}
-		</style>
+	<style type="text/css">
+	</style>
 	</head>
-	<body>
+	<body class="scroll">
+		<button class="w3-button w3-hover-black w3-xxlarge" style="position:fixed;top:0px;" onclick="w3_open()">☰</button>
+		<div id="sidebar" style="display:none;position:fixed;top:0px;" class="w3-sidebar w3-bar-block w3-medium w3-black"></div>
 		<div id="map"></div>
 	</body>
-	<script type="text/javascript" src="render.js"></script>
+	<script type="text/javascript" src="scripts/data.js"></script>
+	<script type="text/javascript" src="scripts/render.js"></script>
+	<script>
+	</script>
+
 </html>
