--- a/index.html
+++ b/index.html
@@ -7,24 +7,34 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<!--<link rel="icon" type="image/png" href="favicon.png"/>-->
+		<link rel="icon" type="image/png" href="images/favicon.png"/>
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
 		<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="">
-	<style type="text/css">
-	</style>
+		<!--<link rel="manifest" href="manifest.webmanifest">-->
+		<style type="text/css">		
+			.w3-bar-item,.w3-button{background-color: rgba(0, 0, 0,0);}
+			hr{border-top: 1px solid  rgba(166, 166, 166,0.5);margin: 10px}
+		</style>
 	</head>
 	<body class="scroll">
-		<button class="w3-button w3-hover-black w3-xxlarge" style="position:fixed;top:0px;" onclick="w3_open()">☰</button>
-		<div id="sidebar" style="display:none;position:fixed;top:0px;" class="w3-sidebar w3-bar-block w3-medium w3-black"></div>
+		<button class="w3-button w3-hover-black" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</button>
+		<div id="sidebar" class="w3-sidebar w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(0, 0, 0, 0.95);"></div>
 		<div id="map"></div>
 	</body>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+	<script>
+		$(window).click(function() {
+			w3_close();
+		});
+
+		$('#side-menu').click(function(event){
+			event.stopPropagation();
+		});
+	</script>
 	<script type="text/javascript" src="scripts/data.js"></script>
 	<script type="text/javascript" src="scripts/render.js"></script>
-	<script>
-	</script>
 
 </html>
