--- a/entry.html
+++ b/entry.html
@@ -117,7 +117,7 @@
 							<br>
 							<div style="text-align:left;">
 								<button onclick="openacc('f1')" class="w3-button w3-block w3-left-align w3-hover-black w3-border">How to View the Map <i class="fa fa-caret-down"></i></button>
-								<div id="f1" class="w3-container w3-hide w3-light-grey w3-animate-zoom">
+								<div id="f1" class="w3-container w3-hide w3-light-grey">
 								  <h4>Section 1</h4>
 								  <p>Some text..</p>
 								</div>
