--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	</head>
 	<body class="scroll">
 		<button class="w3-button w3-hover-black" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</button>
+		<div style="text-align:center;position: fixed;top: 0;left: 10vh;width: 60vw" class="w3-xxlarge w3-padding" id="view-name"></div>
 		<div id="sidebar" class="w3-sidebar w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(0, 0, 0, 0.95);"></div>
 		<div id="map"></div>
 	</body>
