completed map styling

--- a/entry.html
+++ b/entry.html
@@ -33,8 +33,8 @@
 	</head>
 	<body id="body" class="scroll">
 		<a class="w3-button w3-hover-black" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</a>
-		<div id="sidebar" class="w3-sidebar w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(0, 0, 0, 0.95);">
-			<button class="w3-bar-item w3-black w3-hover-black" style="font-size: 4vh;">Menu</button><hr>
+		<div id="sidebar" class="w3-sidebar w3-padding w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(12,14,14,1);color:#c8d0d0;">
+			<hr>
 			<a href="index.html" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">View Map</a>
 			<a href="entry.html#login" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">Login</a>
 			<a href="entry.html#contact" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">Contact Us</a>
