--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 		<!--<link rel="manifest" href="manifest.webmanifest">-->
 		<style type="text/css">		
 			.w3-bar-item,.w3-button{background-color: rgba(0, 0, 0,0);}
-			hr{border-top: 1px solid  rgba(166, 166, 166,0.5);margin: 10px}
+			hr{border-top: 1px solid #232929;margin: 10px}
 		</style>
 	</head>
-	<body class="scroll">
+	<body class="scroll" style="background-color: #202222">
 		<button class="w3-button w3-hover-black" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</button>
 		<div style="text-align:center;position: fixed;top: 0;left: 10vh;width: 60vw" class="w3-xxlarge w3-padding" id="view-name"></div>
-		<div id="sidebar" class="w3-sidebar w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(0, 0, 0, 0.95);"></div>
+		<div id="sidebar" class="w3-sidebar w3-padding w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(12,14,14,1);color:#c8d0d0;"></div>
 		<div id="map"></div>
 	</body>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
