--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Map</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
