--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body class="scroll" style="background-color: #202222">
 		<button class="w3-button w3-hover-black" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</button>
 		<div style="text-align:center;position: fixed;top: 0;left: 10vh;width: 60vw" class="w3-xxlarge w3-padding" id="view-name"></div>
-		<div id="sidebar" class="w3-sidebar w3-padding w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(12,14,14,1);color:#c8d0d0;"></div>
+		<div id="sidebar" class="w3-sidebar w3-padding w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(12,14,14,1);color:#c8d0d0;box-shadow: 100px 0px 100px black;"></div>
 		<div id="map"></div>
 	</body>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
