--- a/entry.html
+++ b/entry.html
@@ -32,12 +32,13 @@
 		</style>
 	</head>
 	<body id="body" class="scroll">
-		<a class="w3-button w3-hover-black" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</a>
+		<button class="w3-menu-btn" id="side-menu" style="position:fixed;top:0px;font-size: 5vh;" onclick="w3_open()">☰</button>
 		<div id="sidebar" class="w3-sidebar w3-padding w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(12,14,14,1);color:#c8d0d0;box-shadow: 100px 0px 100px black;">
-			<a href="index.html" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">View Map</a>
-			<a href="entry.html#login" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">Login</a>
-			<a href="entry.html#contact" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">Contact Us</a>
-			<a href="entry.html#faq" class="w3-bar-item w3-button"  style="font-size: 3vh;" onclick="w3_close()">FAQs</a>
+			<button class="w3-xxlarge w3-cancel" style="text-align:right;" onclick="w3_close()">&times;</button><br>
+			<a href="index.html" class="w3-bar-item w3-round w3-button"  style="font-size: 3vh;" onclick="w3_close()">View Map</a>
+			<a href="entry.html#login" class="w3-bar-item w3-round w3-button"  style="font-size: 3vh;" onclick="w3_close()">Login</a>
+			<a href="entry.html#contact" class="w3-bar-item w3-round w3-button"  style="font-size: 3vh;" onclick="w3_close()">Contact Us</a>
+			<a href="entry.html#faq" class="w3-bar-item w3-round w3-button"  style="font-size: 3vh;" onclick="w3_close()">FAQs</a>
 		</div>
 		<div id="error" style="display: none;position: fixed;top:0px;width: 100%;height: 100%;" class="w3-black w3-center w3-padding"></div>
 		<center class="back" style="width: 100%;height: 100%;">
@@ -154,7 +155,8 @@
 
 			</div>
 		</center>
-		<!--<button class="add-button w3-xlarge w3-bottom w3-bar w3-padding"><b>Add CampusMap to home screen</b></button>-->
+		<button class="add-button w3-xlarge w3-bottom w3-bar w3-padding"><b>Add Map to home screen</b></button>
+
 	</body>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/entry_script.js"></script>
