--- a/entry.html
+++ b/entry.html
@@ -158,6 +158,7 @@
 		<button class="add-button w3-xlarge w3-bottom w3-bar w3-padding"><b>Add Map to home screen</b></button>
 
 	</body>
+	<script type="text/javascript" src="hs.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/entry_script.js"></script>
 	<script type="text/javascript">
