close functions relocation

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 		$('#side-menu').click(function(event){
 			event.stopPropagation();
 		});
+		function w3_open(){document.getElementById("sidebar").style.display = "block";}
+		function w3_close(){document.getElementById("sidebar").style.display = "none";}
 	</script>
 	<script type="text/javascript" src="hs.js"></script>
 	<script type="text/javascript" src="scripts/data.js"></script>
