--- a/entry.html
+++ b/entry.html
@@ -51,7 +51,7 @@
 							<span class="w3-xxlarge"><b>Sign Up</b></span><br><br>
 							
 							<label><b>Access Code</b></label><br>
-							<input class="text-ip" type="text" placeholder="eg. 4ff31-xxxxx-xxxxx-xxxxx-xxxxx-xxxxx-xxxxx-xxxxx">
+							<input class="text-ip" type="password" placeholder="eg. 4ff31-xxxxx-xxxxx-xxxxx-xxxxx-xxxxx-xxxxx-xxxxx">
 							<div class="w3-text-red w3-center w3-medium" id="acc_e"></div>
 							
 							<label><b>New Username</b></label><br>
@@ -169,7 +169,7 @@
 					<div  id="about" class="w3-padding" style="max-width: 500px">
 						<div class="w3-margin"  style="height: 80vh;">
 							<br><br><br>
-							<span class="w3-xxlarge"><b>About Us</b></span><br><br>
+							<span class="w3-xxlarge"><b>Interactive College Map</b></span><br><br>
 							<div>
 								<span class="w3-large"><b>Project Group Members</b></span>
 								<br><br>
