--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div id="searchres" class="scroll text-ip" style="text-align:left;width: 80vw;max-width: 450px;overflow-y: scroll;max-height: 20vh;padding: 0px ;"></div>
 		</div>
 		<button class="w3-cancel" style="font-size:30px;position: fixed;top: 20px;right: 10px;z-index: 11;display:none;" onclick="clearsearch()" id="searchclr">&times;</button>
-		<div style="text-align:center;position: fixed;bottom: 20px;left: 15px;z-index: 10;" class="w3-xxlarge" id="floorn"></div>
+		<div style="text-align:center;position: fixed;bottom: 20px;left: 15px;" class="w3-xxlarge" id="floorn"></div>
 		<div id="sidebar" class="w3-sidebar w3-padding w3-animate-left w3-bar-block w3-medium scroll" style="display:none;position:fixed;top:0px;background-color: rgba(12,14,14,1);color:#c8d0d0;box-shadow: 100px 0px 100px black;z-index: 12;"></div>
 		<div id="map" style="display: block;">
 			<center><i class="fa fa-spinner fa-spin" style="font-size:10vh;margin-top: 35vh;"></i></center>
